--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>CodeaYa</title>
+    <title>DTMLAUNCHER</title>
 </head>
 <link rel="stylesheet" href="index.css">
 <body>
