--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 <body>
     <header>
         <div class="container">
-            <p class="logo">DTMLAUNCHER</p>
+            <a href="https://chimerical-strudel-c9bab4.netlify.app/" target="_blank"><p class="logo">DTMLAUNCHER</p></a>
             <nav>
                 <a href="#seccion-de-ejemplo">¿Por qué DTMLAUNCHER?</a>
                 <a href="#seccion-de-ejemplo2">Plataformas disponibles</a>
